# Lunaria-Client

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  FindDependencies.cmake  LunariaClient.qmlproject  README.md  README_ja.md  README_ua.md  main.qml  qmlmodules  toolchain-mingw.cmake
.zed/: tasks.json
absl-libs/: libabsl_cord.so.2401.0.0  libabsl_log_internal_check_op.so.2401.0.0  libabsl_log_internal_message.so.2401.0.0
content/: App.qml  CMakeLists.txt  SignIn.qml  SignUp.qml  TranslationManager.cpp  TranslationManager.h  luaconfigmanager.cpp  luaconfigmanager.h  splashscreenmanager.cpp  splashscreenmanager.h
content/Components/: CMakeLists.txt  ChatArea.qml  ContactList.qml  ControlPanel.qml  GlobalProperties.qml  OnlineIndicator.qml  RoundedImage.qml  SettingsArea.qml  SettingsNavbar.qml  SideBar.qml  ToggleControlPanel.qml  UserInfo.qml
content/Components/Inputs/: TextInputX.qml
content/Components/Models/: Contact.qml  MessageDelegate.qml  SettingDelegate.qml
content/Components/Popups/: AddDm.qml
content/Components/Shaders/: roundImage.frag  roundImage.qsb
content/LoaderContent/: Dms.qml  Server.qml  Settings.qml
content/LoaderContent/Dms/: Contact.qml
content/LoaderContent/Settings/: General.qml
content/UserStateManager/: UserStateManager.cpp  UserStateManager.h
content/client/: ContactListModel.cpp  ContactListModel.h  MessageListModel.cpp  MessageListModel.h  QuicClientWrapper.cpp  QuicClientWrapper.h  QuicWorker.cpp  QuicWorker.h  QuicWorkerX.cpp  QuicWorkerX.h  ServerListModel.h
content/conf/: CMakeLists.txt  conf.lua
content/window-manager/: window-manager.cpp  window-manager.h
imports/: CMakeLists.txt
imports/LunariaClient/: CMakeLists.txt  Constants.qml  LunariaResources.qrc  qmldir
imports/LunariaClient/designer/: plugin.metainfo
protobuf/: libprotobuf.so.27
src/: import_qml_plugins.h  main.cpp
translations/: CMakeLists.txt  notes.md  translations.qrc  translations_en.ts  translations_ja.ts  translations_uk.ts
